--- a/package.json
+++ b/package.json
@@ -25,16 +25,25 @@
     "@marko/compiler": "^5.22.6",
     "@marko/run": "^0.1.2",
     "@marko/run-adapter-node": "^0.1.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.7.6",
     "@vercel/nft": "^0.22.6",
     "autoprefixer": "^10.4.14",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
+    "rehype-stringify": "^9.0.3",
+    "remark-parse": "^10.0.1",
+    "remark-prism": "^1.3.6",
+    "remark-rehype": "^10.1.0",
+    "slugger": "^1.0.1",
     "storyblok-js-client": "^5.10.2",
     "tailwindcss": "^3.3.1",
     "tsx": "^3.8.2",
     "typescript": "^4.7.4",
+    "unified": "^10.1.2",
     "vite": "^4.1.4"
   },
   "prettier": {
